update contact + privacy to gearclub

--- a/contact.html
+++ b/contact.html
@@ -1,47 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gearclub | Gaming gear</title>
-    <link rel="icon" type="image/x-icon" href="./assets/imgs/logo-only-figure-colored.png">
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="./assets/imgs/logo-only-figure-colored.png"
+    />
 
     <!-- Reset css -->
     <link
-        rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
-        integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
-        crossorigin="anonymous"
-        referrerpolicy="no-referrer"
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+      integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
     />
 
     <!-- Font awesome icom -->
     <link
-        rel="stylesheet"
-        href="./assets/fonts/fontawesome-free-6.4.0-web/css/all.min.css"
+      rel="stylesheet"
+      href="./assets/fonts/fontawesome-free-6.4.0-web/css/all.min.css"
     />
 
     <!-- Bootstrap icon -->
     <link
-        rel="stylesheet"
-        href="./assets/fonts/bootstrap-icons-1.10.4/font/bootstrap-icons.css"
+      rel="stylesheet"
+      href="./assets/fonts/bootstrap-icons-1.10.4/font/bootstrap-icons.css"
     />
 
     <!-- Inter Google Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-        href="https://fonts.googleapis.com/css2?family=Inter:wght@100;300;500;700;900&display=swap"
-        rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@100;300;500;700;900&display=swap"
+      rel="stylesheet"
     />
 
     <!-- Notie -->
-    <link rel="stylesheet" type="text/css" href="https://unpkg.com/notie/dist/notie.min.css">
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://unpkg.com/notie/dist/notie.min.css"
+    />
     <script src="https://unpkg.com/notie"></script>
 
     <!-- Toast -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js" integrity="sha512-pumBsjNRGGqkPzKHndZMaAG+bir374sORyzM3uulLV14lN5LyykqNk8eEeUlUkB3U0M4FApyaHraT65ihJhDpQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"
+      integrity="sha512-pumBsjNRGGqkPzKHndZMaAG+bir374sORyzM3uulLV14lN5LyykqNk8eEeUlUkB3U0M4FApyaHraT65ihJhDpQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
     <link rel="stylesheet" href="./assets/css/commons/toastr.min.css" />
     <script src="./assets/js/commons/toastr.min.js"></script>
 
@@ -51,78 +64,84 @@
     <link rel="stylesheet" href="./assets/css/commons/header.css" />
     <link rel="stylesheet" href="./assets/css/commons/footer.css" />
     <link rel="stylesheet" href="./assets/css/commons/paragraph.css" />
-
-</head>
-<body>
+  </head>
+  <body>
     <div class="app">
-        <div class="sub-header">
-            <ul class="sub-header__list">
-              <li class="sub-header__item">Miễn phí giao hàng đơn từ 1.000.000đ</li>
-              <li class="sub-header__item">Miễn phí quẹt thẻ</li>
-              <li class="sub-header__item">Hàng mới, chính hãng 100%</li>
-              <li class="sub-header__item">Giao hàng siêu tốc</li>
-              <li class="sub-header__item">Bảo hành nhanh chóng</li>
-            </ul>
-    
-            <ul class="sub-header__list">
-              <li class="sub-header__item">Miễn phí giao hàng đơn từ 1.000.000đ</li>
-              <li class="sub-header__item">Miễn phí quẹt thẻ</li>
-              <li class="sub-header__item">Hàng mới, chính hãng 100%</li>
-              <li class="sub-header__item">Giao hàng siêu tốc</li>
-              <li class="sub-header__item">Bảo hành nhanh chóng</li>
-            </ul>
+      <div class="sub-header">
+        <ul class="sub-header__list">
+          <li class="sub-header__item">Miễn phí giao hàng đơn từ 1.000.000đ</li>
+          <li class="sub-header__item">Miễn phí quẹt thẻ</li>
+          <li class="sub-header__item">Hàng mới, chính hãng 100%</li>
+          <li class="sub-header__item">Giao hàng siêu tốc</li>
+          <li class="sub-header__item">Bảo hành nhanh chóng</li>
+        </ul>
+
+        <ul class="sub-header__list">
+          <li class="sub-header__item">Miễn phí giao hàng đơn từ 1.000.000đ</li>
+          <li class="sub-header__item">Miễn phí quẹt thẻ</li>
+          <li class="sub-header__item">Hàng mới, chính hãng 100%</li>
+          <li class="sub-header__item">Giao hàng siêu tốc</li>
+          <li class="sub-header__item">Bảo hành nhanh chóng</li>
+        </ul>
+      </div>
+
+      <header class="header"></header>
+
+      <section class="main-content">
+        <h1 class="text-center title">Liên hệ</h1>
+
+        <div class="paragraph">
+          <img
+            src="./assets/imgs/contact/mouses.jpg"
+            class="image"
+            style="margin-bottom: 30px"
+          />
+          <p>
+            <strong>Gear Club</strong>
+            là nhà phân phối độc quyền các thương hiệu lớn trên thế giới như bàn
+            phím cơ Filco (từ tập đoàn Diatec – Nhật Bản), bàn phím cơ Realforce
+            (từ tập đoàn Topre – Nhật Bản), cân màu Spyder (từ tập đoàn
+            Datacolor – Mỹ), gaming gear thương hiệu Glorious (Glorious PC
+            Gaming Race - Mỹ), Pulsar (Hàn Quốc), Lamzu, Ninjutso, Skypad (Đan
+            Mạch), Corepad (Đức), Lethal Gaming Gear (Mỹ) và Finalmouse (Mỹ).
+          </p>
+          <p>Thông tin doanh nghiệp:</p>
+          <ul>
+            <li>Giấy phép ĐKKD: 02327496381</li>
+            <li>Ngày cấp: 05 tháng 01 năm 2023</li>
+            <li>Nơi cấp: sở KHĐT TP.Hồ Chí Minh</li>
+          </ul>
+          <p>Thông tin liên hệ:</p>
+          <ul>
+            <li>Địa chỉ: 702 Nguyễn Văn Linh, Quận 7, Hồ Chí Minh Việt Nam</li>
+            <li>Trang web chính thức của công ty: www.gearclub.vn</li>
+            <li>Điện thoại (028) 6.283.6481</li>
+            <li>Hotline hỗ trợ khách hàng: 0986.233.643 và 0899.351.972</li>
+            <li>Email: gearclubvn@gmail.com</li>
+            <li>Fanpage Gearclub: www.facebook.com/gearclubvn</li>
+            <li>Fanpage Filco: www.facebook.com/filcovietnam</li>
+            <li>Fanpage Spyder: www.facebook.com/DatacolorSpyderVN</li>
+          </ul>
+          <p>Thời gian làm việc:</p>
+          <ul>
+            <li>Các ngày trong tuần: 9h - 20h</li>
+            <li>Chủ nhật và ngày lễ: 9h – 20h</li>
+          </ul>
         </div>
+      </section>
 
-        <header class="header"></header>
-
-        <section class="main-content">
-            <h1 class="text-center title">Liên hệ</h1>
-
-            <div class="paragraph">
-                <img src="./assets/imgs/contact/mouses.jpg" class="image" style="margin-bottom: 30px;">
-                <p>
-                    <strong>Gear Club</strong>
-                    là nhà phân phối độc quyền các thương hiệu lớn trên thế giới như bàn phím cơ Filco (từ tập đoàn Diatec – Nhật Bản), bàn phím cơ Realforce (từ tập đoàn Topre – Nhật Bản), cân màu Spyder (từ tập đoàn Datacolor – Mỹ), gaming gear thương hiệu Glorious (Glorious PC Gaming Race - Mỹ), Pulsar (Hàn Quốc), Lamzu, Ninjutso, Skypad (Đan Mạch), Corepad (Đức), Lethal Gaming Gear (Mỹ) và Finalmouse (Mỹ).
-                </p>
-                <p>Thông tin doanh nghiệp:</p>
-                <ul>
-                    <li>Giấy phép ĐKKD: 02327496381</li>
-                    <li>Ngày cấp: 05 tháng 01 năm 2023</li>
-                    <li>Nơi cấp: sở KHĐT TP.Hồ Chí Minh</li>
-                </ul>
-                <p>Thông tin liên hệ:</p>
-                <ul>
-                    <li>Địa chỉ: 702 Nguyễn Văn Linh, Quận 7, Hồ Chí Minh Việt Nam</li>
-                    <li>Trang web chính thức của công ty: www.gearclub.vn</li>
-                    <li>Điện thoại (028) 6.283.6481</li>
-                    <li>Hotline hỗ trợ khách hàng: 0986.233.643 và 0899.351.972</li>
-                    <li>Email: info@gearclub.vn</li>
-                    <li>Fanpage Phong Cách Xanh: www.facebook.com/gearclubvn</li>
-                    <li>Fanpage Filco: www.facebook.com/filcovietnam</li>
-                    <li>Fanpage Spyder: www.facebook.com/DatacolorSpyderVN</li>
-                </ul>
-                <p>Thời gian làm việc:</p>
-                <ul>
-                    <li>Các ngày trong tuần: 9h - 20h</li>
-                    <li>Chủ nhật và ngày lễ: 9h – 20h</li>
-                </ul>
-            </div>
-        </section>
-
-        <footer class="footer"></footer>
+      <footer class="footer"></footer>
     </div>
 
     <script type="module">
-        import { renderHeader } from './assets/js/commons/header/header.js';
-        import { renderFooter } from './assets/js/commons/footer.js';
-  
-        const header = document.querySelector('header.header');
-        renderHeader(header);
+      import { renderHeader } from './assets/js/commons/header/header.js';
+      import { renderFooter } from './assets/js/commons/footer.js';
 
-        const footer = document.querySelector('footer.footer');
-        renderFooter(footer);  
-  
+      const header = document.querySelector('header.header');
+      renderHeader(header);
+
+      const footer = document.querySelector('footer.footer');
+      renderFooter(footer);
     </script>
-  
-</body>
+  </body>
 </html>
