--- a/privacy.html
+++ b/privacy.html
@@ -159,9 +159,9 @@
             <li>Tên doanh nghiệp: Công ty TNHH Gear Club</li>
             <li>
               Thành lập và hoạt động theo Giấy chứng nhận đăng ký doanh nghiệp
-              số: 0307185382 do Sở KH-ĐT TP.HCM cấp ngày 04/02/2009.
+              số: 02327496381 do Sở KH-ĐT TP.HCM cấp ngày 05/01/2023.
             </li>
-            <li>Trụ sở chính: 89 Hồ Văn Huê, P9, Q.Phú Nhuận, TP.HCM.</li>
+            <li>Trụ sở chính: 702 Nguyễn Văn Linh, Phú Mỹ, Quận 7, TP.HCM.</li>
           </ul>
           <h2>
             Phương thức và công cụ để người dùng tiếp cận và chỉnh sửa dữ liệu
@@ -172,7 +172,7 @@
           </p>
           <ul>
             <li>Gọi điện trực tiếp về số điện thoại: (028) 6.292.1182</li>
-            <li>Gửi mail: info@gearclub.vn</li>
+            <li>Gửi mail: gearclubvn@gmail.com</li>
           </ul>
           <p>
             <b
