--- a/success-payment-redirect.html
+++ b/success-payment-redirect.html
@@ -21,6 +21,7 @@
         src="./assets/imgs/payment-success-background.jpg"
         alt="Background image"
         style="width: 100%; height: 100%; object-fit: cover"
+        loading="lazy"
       />
     </main>
 
