fix redirect success payment

--- a/success-payment-redirect.html
+++ b/success-payment-redirect.html
@@ -44,7 +44,7 @@
           'success'
         );
 
-        setTimeout(changeInDatabase(), 3000);
+        setTimeout(changeInDatabase, 3000);
       } else {
         document.querySelector('.text').innerHTML = `
           <h1>Thanh toán xảy ra lỗi, chuẩn bị chuyển hướng..</h1>
